--- a/writejdf.wiki
+++ b/writejdf.wiki
@@ -150,9 +150,9 @@ A            [type = "tiled_matrix_desc_t*"]
 uplo         [type = PLASMA_enum]
 INFO         [type = "int*"]
 }}}
-Here, we define for example the general type of the object A as a C structure of type {{{tiled_matrix_desc_t*}}} (more later about this on the [[datadistribution|data distribution page]]). {{{uplo}}} and {{{INFO}}} are LAPACK parameters, used by the kernels. The generator function that is going to be created by the JDF compiler will take all these objects as parameters, each one of the specified type (hence, the generator function prototype will be {{{parsec_object_t *function(tiled_matrix_desc_t *A, PLASMA_enum uplo, int *INFO)}}} See more explanations on [[datadistribution|How to Write a program that uses a PaRSEC-Enabled Operation]]).
+Here, we define for example the general type of the object {{{A}}} as a C structure of type {{{tiled_matrix_desc_t*}}} (more later about this on the [[datadistribution|data distribution page]]). {{{uplo}}} and {{{INFO}}} are LAPACK parameters, used by the kernels. The generator function that is going to be created by the JDF compiler will take all these objects as parameters, each one of the specified type (hence, the generator function prototype will be {{{parsec_object_t *function(tiled_matrix_desc_t *A, PLASMA_enum uplo, int *INFO)}}} See more explanations on [[datadistribution|How to Write a program that uses a PaRSEC-Enabled Operation]]).
 
-A Cholesky factorization contains four kernels, called [color=darkgreen]POTRF, HERK, TRSM, and GEMM[/color]. For each of these kernels, the JDF holds a parameterized task. Let us look closely at the first one, [color=darkgreen]POTRF[/color]:
+A Cholesky factorization contains four kernels, called **POTRF, HERK, TRSM, and GEMM**. For each of these kernels, the JDF holds a parameterized task. Let us look closely at the first one, **POTRF**:
 {{{
 POTRF(k) 
 
@@ -171,9 +171,9 @@ BODY
         CORE_zpotrf(uplo, A->mb, T, A->mb, INFO );
 END
 }}}
-The task is defined with a single parameter, {{{k}}}. This parameter must have an execution space that is entirely defined by the list of global objects that were defined in the beginning of the JDF. In this case, {{{k}}} is between {{{0}}} and {{{A->mt-1}}} (inclusive), and since {{{A->mt}}} is a parameter of the generator function, {{{k}}} is entirely defined. As you can see with [color=darkgreen]GEMM[/color], for example, multiple parameters can be used, and parameters can depend on the value of preceding parameters (in [color=darkgreen]GEMM[/color], {{{k}}} is defined by {{{A->mt}}}, {{{m}}} is defined by the possible values of {{{k}}} and by {{{A->mt}}}, {{{n}}} is defined by the possible values of {{{k}}} and {{{m}}}). This definition must be restrictive: if the task [color=darkgreen]POTRF(0)[/color] exists by its parameters (i.e. {{{k}}} can be equal to {{{0}}}), it will be scheduled by the runtime system.
+The task is defined with a single parameter, {{{k}}}. This parameter must have an execution space that is entirely defined by the list of global objects that were defined in the beginning of the JDF. In this case, {{{k}}} is between {{{0}}} and {{{A->mt-1}}} (inclusive), and since {{{A->mt}}} is a parameter of the generator function, {{{k}}} is entirely defined. As you can see with **GEMM**, for example, multiple parameters can be used, and parameters can depend on the value of preceding parameters (in **GEMM**, {{{k}}} is defined by {{{A->mt}}}, {{{m}}} is defined by the possible values of {{{k}}} and by {{{A->mt}}}, {{{n}}} is defined by the possible values of {{{k}}} and {{{m}}}). This definition must be restrictive: if the task **POTRF(0)** exists by its parameters (i.e. {{{k}}} can be equal to {{{0}}}), it will be scheduled by the runtime system.
 
-Then, the task defines its data affinity: task [color=darkgreen]POTRF(k)[/color] will run on the node that holds the part of the matrix pointed by {{{A(k, k)}}}. Each task must define a single data as its affinity. The entry is a reference on a {{{parsec_ddesc_t}}} object, with the appropriate number of parameters. See more on [[datadistribution|Write a program that uses a PaRSEC-Enabled Operation]] about data distributions.
+Then, the task defines its data affinity: task **POTRF(k)** will run on the node that holds the part of the matrix pointed by {{{A(k, k)}}}. Each task must define a single data as its affinity. The entry is a reference on a {{{parsec_ddesc_t}}} object, with the appropriate number of parameters. See more on [[datadistribution|Write a program that uses a PaRSEC-Enabled Operation]] about data distributions.
 
 After the data affinity, comes the data flow of the task. 
 {{{
@@ -182,11 +182,11 @@ RW T <- (k == 0) ? A(k, k) : T HERK(k-1, k)
      -> T TRSM(k, k+1..A->mt-1)
      -> A(k, k)
 }}}
-This data flow defines a single data element, {{{T}}}, that flows inside [color=darkgreen]POTRF(k)[/color] with the first line, and after {{{T}}} has been processed by the task, it flows out of it, towards tasks or memory, as specified by the two last lines. Because the data element is accessed in read and write by the task, it is specified so using the keyword {{{RW}}} in front of it. Each data element that is so defined must have a single input flow (although multiple input flows are acceptable syntaxically, they must be mutually exclusive, to ensure the data element is defined by a single task). The first line reads as "{{{T}}} comes from the memory if {{{k}}} is equal to {{{0}}}, and then it is accessed directly from memory, as provided by {{{A(k, k)}}}; otherwise, {{{T}}} comes from the data element also called {{{T}}} in the task [color=darkgreen]HERK(k-1, k)[/color]". The second line reads as "{{{T}}} flows to the data element also called {{{T}}} in the task [color=darkgreen]TRSM(k, k+1)[/color], and to the data element also called {{{T}}} in the task [color=darkgreen]TRSM(k, k+2)[/color], and so on until the data element called {{{T}}} in the task [color=darkgreen]TRSM(k, A->mt-1)[/color]". If this set reduces to the empty set, {{{T}}} will not flow out of this task. The last line reads as "one this data element has been processed by this task, no other task of the same operation will modify its value, and it should be copied back into memory, at the location {{{A(k, k)}}}". 
+This data flow defines a single data element, {{{T}}}, that flows inside **POTRF(k)** with the first line, and after {{{T}}} has been processed by the task, it flows out of it, towards tasks or memory, as specified by the two last lines. Because the data element is accessed in read and write by the task, it is specified so using the keyword {{{RW}}} in front of it. Each data element that is so defined must have a single input flow (although multiple input flows are acceptable syntaxically, they must be mutually exclusive, to ensure the data element is defined by a single task). The first line reads as "{{{T}}} comes from the memory if {{{k}}} is equal to {{{0}}}, and then it is accessed directly from memory, as provided by {{{A(k, k)}}}; otherwise, {{{T}}} comes from the data element also called {{{T}}} in the task **HERK(k-1, k)**". The second line reads as "{{{T}}} flows to the data element also called {{{T}}} in the task **TRSM(k, k+1)**, and to the data element also called {{{T}}} in the task **TRSM(k, k+2)**, and so on until the data element called {{{T}}} in the task **TRSM(k, A->mt-1)**". If this set reduces to the empty set, {{{T}}} will not flow out of this task. The last line reads as "one this data element has been processed by this task, no other task of the same operation will modify its value, and it should be copied back into memory, at the location {{{A(k, k)}}}". 
 
 The PaRSEC runtime engine does not guarantee that {{{T}}} will always be located in {{{A(k, k)}}} during the whole execution: it can be copied in a temporary memory, for communications or optmiziation purposes. Nor does it guarantees that {{{T}}} will not point to {{{A(k, k)}}} if this is at all possible. That is the reason why the developper should always specify when the data should be safely written back in memory, and never access the memory directly, but only through the data flow.
 
-Data flows in the JDF must be symmetric: if [color=darkgreen]POTRF[/color] writes that it receives data from [color=darkgreen]HERK[/color], [color=darkgreen]HERK[/color] must write that it sends data to [color=darkgreen]POTRF[/color]. The inversion of parameters must match.
+Data flows in the JDF must be symmetric: if **POTRF** writes that it receives data from **HERK**, **HERK** must write that it sends data to **POTRF**. The inversion of parameters must match.
 
 Tasks can define up to {{{MAX_PARAM_COUNT}}} data elements. If more data elements are necessary, it may be necessary to create pseudo tasks to aggregate them.
 
@@ -198,7 +198,7 @@ BODY
         CORE_zpotrf(uplo, A->mb, T, A->mb, INFO);
 END
 }}}
-The body is a piece of C code that can use the parameters of the task, the data elements defined in the task, and all the global objects that have been defined (although it should not use data references on data elements that flow in one of the tasks). For example, the body of [color=darkgreen]POTRF[/color] uses {{{INFO}}} and {{{uplo}}}, which are a memory reference and an integer defined by the global objects, but do not flow in the data flow. And it uses {{{T}}}, which is a data element defined by the data flow of this task. In this case, the C-code to call is minimal: it is just a simple call to the BLAS routine potrf with the appropriate parameters.
+The body is a piece of C code that can use the parameters of the task, the data elements defined in the task, and all the global objects that have been defined (although it should not use data references on data elements that flow in one of the tasks). For example, the body of **POTRF** uses {{{INFO}}} and {{{uplo}}}, which are a memory reference and an integer defined by the global objects, but do not flow in the data flow. And it uses {{{T}}}, which is a data element defined by the data flow of this task. In this case, the C-code to call is minimal: it is just a simple call to the BLAS routine potrf with the appropriate parameters.
 
 The JDF translator will create a piece of code that defines {{{T}}} as a function of the data flow, then dump this C-code, which is not parsed or interpreted, and then a piece of code to handle {{{T}}} (potentially copying it back into memory, if needed), and/or pass it on to other tasks.
 
