--- a/Home.wiki
+++ b/Home.wiki
@@ -33,6 +33,7 @@ The PaRSEC / DPLASMA community has put together tutorials to explain how to use 
 
  * [[Status of HPL over PaRSEC|Memo on HPL over PaRSEC]]
  * [[Memory error detectors|Memory errors detectors]]
+ * [[high level|A high level description of the PaRSEC runtime]]
 
  ---- 
 
