Add some documentation on migrating legacy applications, and a first try at documenting DTD

--- a/Home.wiki
+++ b/Home.wiki
@@ -18,6 +18,7 @@ Two moderated mailing-lists are available, one for the users and the other for t
 ** [[PaRSEC%20Trace%20Tables%20via%20Python|How to use the Python PaRSEC Trace Tables interface]]
 ** [[PaRSEC%20on%20Intel%20Xeon%20Phi%20Native%20Mode.wiki|How to run PaRSEC in Intel Xeon Phi (native mode)]]
 ** [[Using PaRSEC binding to bind computation and communication cores.md|Binding with MPI and PaRSEC]]
+* [[Migrating Legacy Applications to PaRSEC]]
 
 == How to contribute to PaRSEC ==
 
