--- a/Profiling PaRSEC Applications with PAPI.wiki
+++ b/Profiling PaRSEC Applications with PAPI.wiki
@@ -73,19 +73,21 @@ PaRSEC exposes a series of internal counters as PAPI events using the Software D
 
 To access these counters, the final program needs to be linked with a recent version of libpapi, that features the SDE interface.
 
-These PAPI events appear with the prefix ```sde:::PARSEC```.
+These PAPI events appear with the prefix {{{sde:::PARSEC}}}.
 
-If ```papi_native_avail``` is linked with libparsec, it will show all available events. Alternatively, an application that links both parsec and papi (with SDE enabled) can list the events iterating on ```PAPI_get_event_info```.
+If {{{papi_native_avail}}} is linked with libparsec, it will show all available events exposed by PaRSEC. Alternatively, an application that links both PaRSEC and PAPI (with SDE enabled) can list the events iterating on {{{PAPI_get_event_info}}}.
 
-To access these events inside a PINS tracing, one just needs to declare the event as one of them in the ```pins_papi_event``` MCA parameter. For example:
+To access these events inside a PINS tracing, one just needs to declare the event as one of them in the {{{pins_papi_event}}} MCA parameter. For example:
 
-```
+{{{
 $shell > cat ~/.parsec/mca-params.conf
+profile_filename = /tmp/parsec-pins-profile
 pins_papi_event = sde:::PARSEC::SCHEDULER::PENDING_TASKS
 mca_pins = papi
 pins_papi = 1
 $shell >
-```
+}}}
+
 Will trace the number of pending tasks in all schedulers, at the entry and termination of the execution of each task.
 
 = Virtual Process Mapping =
